--- a/index.html
+++ b/index.html
@@ -6,6 +6,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Szmul-Med</title>
   </head>
+  <style>
+    body {
+      margin: 0;
+      padding: 0;
+      background: rgb(255, 255, 255);
+      background: linear-gradient(
+              90deg,
+              rgba(255, 255, 255, 1) 0%,
+              rgba(212,226,209,1) 100%
+      );
+    }
+  </style>
+
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
